--- a/index.html
+++ b/index.html
@@ -448,6 +448,23 @@
       border-radius: 14px;
       background: #e0f7fa;
     }
+    @media (max-width: 768px) {
+      .portfolio-item {
+        flex-direction: column;
+        min-height: unset;
+      }
+      .portfolio-img {
+        width: 100%;
+        min-width: 0;
+        max-width: 100%;
+        height: 180px;
+        min-height: 120px;
+        border-radius: var(--radius) var(--radius) 0 0;
+      }
+      .portfolio-content {
+        padding: 1.2rem 1rem 1.5rem 1rem;
+      }
+    }
   </style>
 </head>
 <body>
